--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/websystique
+jdbc.url = jdbc:mysql://labdb.crk5k83boqhj.ca-central-1.rds.amazonaws.com:3306/websystique
 jdbc.username = root
-jdbc.password = Lync123*
+jdbc.password = admin123
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
